fix: my feed modal mobile was having some width issues and overflow scroll (#1170)
The mobile my feed modal had bottom spacing for the footer which caused overscroll
It was also not positioned at full-width on mobile
Tested on desktop/mobile changes, yet to try on physical device (based on preview URL)

WT-391 #done

--- a/packages/shared/src/components/modals/ResponsiveModal.module.css
+++ b/packages/shared/src/components/modals/ResponsiveModal.module.css
@@ -2,6 +2,10 @@
   & :global(.overlay) {
     position: relative;
     min-height: 100vh;
+    min-height: -moz-available;
+    min-height: -webkit-fill-available;
+    min-height: fill-available;
+    height: 100vh;
     padding: 0;
 
     &:global(.fixed-position) {
